# SlipStream

./: .gitignore  CMakeLists.txt  HOST_CODE_TRACKER.md  Installer-LICENSE.txt  LICENSE.md  LICENSE.txt  README.MD  SlipStream.iss  build.bat  build_installer.bat  build_installer_debug.bat  build_installer_release.bat  index.html  main.cpp  run.bat  styles.css  vcpkg.json
client/: index.html  styles.css
client/js/: audio-worklet.js  auth.js  constants.js  input.js  media.js  mic-worklet.js  mic.js  network.js  protocol.js  renderer.js  state.js  ui.js
hpp/: audio.hpp  capture.hpp  common.hpp  encoder.hpp  input.hpp  stats.hpp  webrtc.hpp
include/: app_support.hpp  audio.hpp  capture.hpp  common.hpp  encoder.hpp  input.hpp  mic.hpp  stats.hpp  webrtc.hpp
include/host/: host_app.hpp
include/host/core/: app_support.hpp  audio_resampler.hpp  common.hpp  d3d_sync.hpp  logging.hpp  protocol.hpp  utils.hpp
include/host/io/: input.hpp  tray.hpp
include/host/media/: audio.hpp  capture.hpp  encoder.hpp
include/host/net/: port_mapper.hpp  webrtc.hpp
js/: input.js  media.js  network.js  renderer.js  state.js  ui.js
src/: app_support.cpp  audio.cpp  capture.cpp  common.cpp  encoder.cpp  input.cpp  main.cpp  mic.cpp  tray.cpp  version.rc  webrtc.cpp
src/host/: host_app.cpp
src/host/core/: app_support.cpp  common.cpp
src/host/io/: input.cpp  tray.cpp
src/host/media/: audio.cpp  capture.cpp  encoder.cpp
src/host/net/: port_mapper.cpp  webrtc.cpp
